Fixed all issues which caused visibility issues for GitHub pages

--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ nav ul li:hover::after {
 #hero::after {
     content: " ";
     position: absolute;
-    background-image: url(/Homescout/hero-img.jpg);
+    background-image: url(/Hotelscout/hero-img.jpg);
     left: 0;
     top: 0;
     right: 0;
@@ -327,7 +327,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     right: 0;
     bottom: 0;
     z-index: -1;
-    background-image: url(/Homescout/contact-cover.jpg);
+    background-image: url(/Hotelscout/contact-cover.jpg);
     background-size: cover;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
@@ -401,7 +401,7 @@ fieldset input[type="submit"]:hover {
     right: 0;
     bottom: 0;
     z-index: -1;
-    background-image: url(/Homescout/about-cover.jpg);
+    background-image: url(/Hotelscout/about-cover.jpg);
     background-size: cover;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
